syntax = "proto3";

                 package tbClreDedPrcDclr;
service TbClreDedPrcDclrService {
 rpc createTbClreDedPrcDclr (TbClreDedPrcDclrCreateInput) returns (TbClreDedPrcDclr) {}
rpc tbClreDedPrcDclrs (findManyParams) returns (stream TbClreDedPrcDclr) {}
rpc tbClreDedPrcDclr (TbClreDedPrcDclrWhereUniqueInput) returns (TbClreDedPrcDclr) {}
rpc updateTbClreDedPrcDclr (TbClreDedPrcDclrUpdateInput) returns (TbClreDedPrcDclr) {}
rpc deleteTbClreDedPrcDclr (TbClreDedPrcDclrWhereUniqueInput) returns (TbClreDedPrcDclr) {} 
 }
message TbClreDedPrcDclrCreateInput {
int32 adcstBrkgAmt = 1;
int32 adcstCnsmCmdtCst = 2;
int32 adcstCtnrPckgCst = 3;
int32 adcstImpPortInfeeAmt = 4;
int32 adcstImpPortOtcst = 5;
int32 adcstImpPortTrcgAmt = 6;
int32 adcstMtrlCmpsFtorCst = 7;
int32 adcstPrcsCst = 8;
string adcstPuchCmisYn = 9;
int32 adcstRyltCst = 10;
string adcstSaleCmisYn = 11;
int32 adcstSelrRvrsAmt = 12;
int32 adcstTechDgnOtcst = 13;
int32 adcstToolOtcst = 14;
int32 adcstTrnpCst = 15;
string aditOpinCn = 16;
int32 adtnCstSumAmt = 17;
string bfhnDtrmOfdcNo = 18;
string bfhnDtrmOfdcPblsDt = 19;
string byerIdfyNo = 20;
int32 cputBssDlngPrc = 21;
int32 cputBssIndrAmt = 22;
int32 cputBssSumAmt = 23;
string createdAt = 24;
string cvntDt = 25;
string cvntNo = 26;
string dcerNm = 27;
string dclrDt = 28;
string dclrPlcNm = 29;
int32 dclrTxPrc = 30;
int32 ddctExpCntyTrifAmt = 31;
int32 ddctOtcst = 32;
int32 ddctOthsApmtAmt = 33;
int32 ddctSumAmt = 34;
int32 ddctTrnpCst = 35;
string delYn = 36;
string dlvrCondCd = 37;
string frstRegstId = 38;
string frstRgsrDttm = 39;
string id = 40;
string invcNo = 41;
string invcPblsDt = 42;
string lastChgDttm = 43;
string lastChprId = 44;
int32 mdfyDgcnt = 45;
string othsDesc = 46;
string quesRspn_1Yn = 47;
string quesRspn_2Yn = 48;
string quesRspn_3Yn = 49;
string quesRspn_4Yn = 50;
string quesRspn_5Yn = 51;
string quesRspn_6Yn = 52;
string quesRspn_7Yn = 53;
string quesRspn_8Yn = 54;
string reffNo = 55;
string rstcMtrCn = 56;
string selrNo = 57;
string updatedAt = 58;
};
message TbClreDedPrcDclr {
int32 adcstBrkgAmt = 1;
int32 adcstCnsmCmdtCst = 2;
int32 adcstCtnrPckgCst = 3;
int32 adcstImpPortInfeeAmt = 4;
int32 adcstImpPortOtcst = 5;
int32 adcstImpPortTrcgAmt = 6;
int32 adcstMtrlCmpsFtorCst = 7;
int32 adcstPrcsCst = 8;
string adcstPuchCmisYn = 9;
int32 adcstRyltCst = 10;
string adcstSaleCmisYn = 11;
int32 adcstSelrRvrsAmt = 12;
int32 adcstTechDgnOtcst = 13;
int32 adcstToolOtcst = 14;
int32 adcstTrnpCst = 15;
string aditOpinCn = 16;
int32 adtnCstSumAmt = 17;
string bfhnDtrmOfdcNo = 18;
string bfhnDtrmOfdcPblsDt = 19;
string byerIdfyNo = 20;
int32 cputBssDlngPrc = 21;
int32 cputBssIndrAmt = 22;
int32 cputBssSumAmt = 23;
string createdAt = 24;
string cvntDt = 25;
string cvntNo = 26;
string dcerNm = 27;
string dclrDt = 28;
string dclrPlcNm = 29;
int32 dclrTxPrc = 30;
int32 ddctExpCntyTrifAmt = 31;
int32 ddctOtcst = 32;
int32 ddctOthsApmtAmt = 33;
int32 ddctSumAmt = 34;
int32 ddctTrnpCst = 35;
string delYn = 36;
string dlvrCondCd = 37;
string frstRegstId = 38;
string frstRgsrDttm = 39;
string id = 40;
string invcNo = 41;
string invcPblsDt = 42;
string lastChgDttm = 43;
string lastChprId = 44;
int32 mdfyDgcnt = 45;
string othsDesc = 46;
string quesRspn_1Yn = 47;
string quesRspn_2Yn = 48;
string quesRspn_3Yn = 49;
string quesRspn_4Yn = 50;
string quesRspn_5Yn = 51;
string quesRspn_6Yn = 52;
string quesRspn_7Yn = 53;
string quesRspn_8Yn = 54;
string reffNo = 55;
string rstcMtrCn = 56;
string selrNo = 57;
string updatedAt = 58;
};
message TbClreDedPrcDclrWhereUniqueInput {
int32 adcstBrkgAmt = 1;
int32 adcstCnsmCmdtCst = 2;
int32 adcstCtnrPckgCst = 3;
int32 adcstImpPortInfeeAmt = 4;
int32 adcstImpPortOtcst = 5;
int32 adcstImpPortTrcgAmt = 6;
int32 adcstMtrlCmpsFtorCst = 7;
int32 adcstPrcsCst = 8;
string adcstPuchCmisYn = 9;
int32 adcstRyltCst = 10;
string adcstSaleCmisYn = 11;
int32 adcstSelrRvrsAmt = 12;
int32 adcstTechDgnOtcst = 13;
int32 adcstToolOtcst = 14;
int32 adcstTrnpCst = 15;
string aditOpinCn = 16;
int32 adtnCstSumAmt = 17;
string bfhnDtrmOfdcNo = 18;
string bfhnDtrmOfdcPblsDt = 19;
string byerIdfyNo = 20;
int32 cputBssDlngPrc = 21;
int32 cputBssIndrAmt = 22;
int32 cputBssSumAmt = 23;
string createdAt = 24;
string cvntDt = 25;
string cvntNo = 26;
string dcerNm = 27;
string dclrDt = 28;
string dclrPlcNm = 29;
int32 dclrTxPrc = 30;
int32 ddctExpCntyTrifAmt = 31;
int32 ddctOtcst = 32;
int32 ddctOthsApmtAmt = 33;
int32 ddctSumAmt = 34;
int32 ddctTrnpCst = 35;
string delYn = 36;
string dlvrCondCd = 37;
string frstRegstId = 38;
string frstRgsrDttm = 39;
string id = 40;
string invcNo = 41;
string invcPblsDt = 42;
string lastChgDttm = 43;
string lastChprId = 44;
int32 mdfyDgcnt = 45;
string othsDesc = 46;
string quesRspn_1Yn = 47;
string quesRspn_2Yn = 48;
string quesRspn_3Yn = 49;
string quesRspn_4Yn = 50;
string quesRspn_5Yn = 51;
string quesRspn_6Yn = 52;
string quesRspn_7Yn = 53;
string quesRspn_8Yn = 54;
string reffNo = 55;
string rstcMtrCn = 56;
string selrNo = 57;
string updatedAt = 58;
};
message TbClreDedPrcDclrUpdateInput {
int32 adcstBrkgAmt = 1;
int32 adcstCnsmCmdtCst = 2;
int32 adcstCtnrPckgCst = 3;
int32 adcstImpPortInfeeAmt = 4;
int32 adcstImpPortOtcst = 5;
int32 adcstImpPortTrcgAmt = 6;
int32 adcstMtrlCmpsFtorCst = 7;
int32 adcstPrcsCst = 8;
string adcstPuchCmisYn = 9;
int32 adcstRyltCst = 10;
string adcstSaleCmisYn = 11;
int32 adcstSelrRvrsAmt = 12;
int32 adcstTechDgnOtcst = 13;
int32 adcstToolOtcst = 14;
int32 adcstTrnpCst = 15;
string aditOpinCn = 16;
int32 adtnCstSumAmt = 17;
string bfhnDtrmOfdcNo = 18;
string bfhnDtrmOfdcPblsDt = 19;
string byerIdfyNo = 20;
int32 cputBssDlngPrc = 21;
int32 cputBssIndrAmt = 22;
int32 cputBssSumAmt = 23;
string createdAt = 24;
string cvntDt = 25;
string cvntNo = 26;
string dcerNm = 27;
string dclrDt = 28;
string dclrPlcNm = 29;
int32 dclrTxPrc = 30;
int32 ddctExpCntyTrifAmt = 31;
int32 ddctOtcst = 32;
int32 ddctOthsApmtAmt = 33;
int32 ddctSumAmt = 34;
int32 ddctTrnpCst = 35;
string delYn = 36;
string dlvrCondCd = 37;
string frstRegstId = 38;
string frstRgsrDttm = 39;
string id = 40;
string invcNo = 41;
string invcPblsDt = 42;
string lastChgDttm = 43;
string lastChprId = 44;
int32 mdfyDgcnt = 45;
string othsDesc = 46;
string quesRspn_1Yn = 47;
string quesRspn_2Yn = 48;
string quesRspn_3Yn = 49;
string quesRspn_4Yn = 50;
string quesRspn_5Yn = 51;
string quesRspn_6Yn = 52;
string quesRspn_7Yn = 53;
string quesRspn_8Yn = 54;
string reffNo = 55;
string rstcMtrCn = 56;
string selrNo = 57;
string updatedAt = 58;
};
message findManyParams {

};